--- a/Sensoren_Aktoren.tex
+++ b/Sensoren_Aktoren.tex
@@ -217,31 +217,31 @@ void ReadHeight(void) {
   \textcolor{red}{to be continued after realtime measurements}
 
 \chapter{Aktoren}
-\renewcommand{\kapitelautor}{Autor: Christina Bornberg, Lucas Ullrich}
+\renewcommand{\kapitelautor}{Autor: Christina Bornberg}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Multicopter Chrisy}
+\section{Multicopter}
   Multicopter gehören zu der Luftfahrzeuggattung Hubschrauber. Sie starten senkrecht und können durch den Antrieb der Rotoren Neigung erzeugen. Durch diese Neigung kann der Hexacopter nach vorne, zurück, nach links und nach rechts fliegen. Durch die Rotoren, bei denen sich abwechselnd einer nach links und einer nach rechts dreht, kann sich der Hexacopter zusätzlich um seine Hochachse drehen.
 
-  \subsection{Funktion Chrisy}
+  \subsection{Funktion}
   Ein Multicopter besteht im Normalfall aus folgenden Komponenten:
   Dem Empfängermodul, dem DJI NAZA-M Flightcontroller sowie der Multicopterhardware (Rotoren, Motoren, Gestell und Leistungselektronik). Der Empfänger des Multicopters kann von einem Sender Steuersignale empfangen und aufgrund der empfangenen Steuersignale Soll-Werte für die Motoren berechnen, um den Multicopter auf die entsprechende Höhe bzw. entsprechende Geschwindigkeit in x, y oder z Richtung zu bringen.
 
   % BILD Funktion Blockschaltbild (Dokument) %
 
-  \subsection{Erweiterte Funktion Chrisy}
+  \subsection{Erweiterte Funktion}
   Im Rahmen dieser Diplomarbeit wurden die üblicherweise verwendeten Teile um vier weitere Komponenten erweitert, um einen automatischen Flug zu gewährleisten: Pixycam, Ultraschallsensor, WLAN Modul und ein Mikrocontroller. Pixycam und Ultraschallsensor sind dafür verantwortlich, die Daten für die Berechnung der augenblicklichen Position des zu bestimmen. Im Mikrocontroller läuft ein Algorithmus, der aus diesen empfangen Daten die Position überprüft. Wenn der Wert vom optimalen Bereich abweicht, werden die Steuersignale abgeändert. Durch das Wlan-Modul bekommt der Mikrocontroller die Information, durch wie viele Marker der Weg definiert ist und welcher Farbcode der letzte ist, auf dem die Landung erfolgt.
 
   % BILD %
 
-  \subsection{Multicopter Arten Chrisy}
+  \subsection{Multicopter Arten}
   Es gibt verschiedene Arten von Multicoptern. 
   Je nachdem wie viele Rotoren in einer Ebene liegen, setzt sich der Name zusammen.
   Die bekannteste Art ist der Quadrocopter, welcher 4 Rotoren besitzt. Weiters gibt es Hexacopter mit 6 und Octocopter mit 8 Rotoren. \cite{GrundlagenMulticopter}
 
   Der Flightcontroller DJI Naza-M lite unterstützt verschiedene Konfigurationsarten von Quadrocoptern und Hexacoptern. Hierzu zählen + und x Konfiguration für den Quadrocopter. Beim Hexacopter gibt es die Varianten +, x, reverse Y und Y. Diese werden im nächsten Abschnitt genauer beschrieben. \cite{NAZA_Konfig}
 
-  \subsection{Konfiguration Chrisy}
+  \subsection{Konfiguration}
   Grundsätzlich gibt es 2 Arten einen Multicopter zu Konfigurieren. \cite{GrundlagenMulticopter}
   Einerseits die +- beziehungsweise I-Konfiguration, andererseits die x- beziehungsweise H-Konfiguration. Weiters gibt es die weniger verbreitete Y-Konfiguration. Dabei geht es um die Ausrichtung und die damit verbundene Fluglage. 
 
@@ -251,7 +251,7 @@ void ReadHeight(void) {
 
   % BILD mit 4, 6, 8 in + bzw x %
 
-  \subsection{Mögliche Anwendungsgebiete Chrisy}
+  \subsection{Mögliche Anwendungsgebiete}
   Multicopter finden in vielen Bereichen Anwendung. \cite{copterAnwendung}
   \begin{itemize}
     \item Fotographie und Videos / Filmindustrie / Anfertigen von hoch aufgelösten Luftbildkarten
@@ -268,8 +268,8 @@ void ReadHeight(void) {
 
 \section{Rotoren}
 
-  \subsection{Technische Planung Lucas}
-
+  \subsection{Technische Planung}
+  Autor: Lucas Ullrich\\
   Der Hexacopter selbst vefügt über 6 Rotoren. Diese werden für die unterschiedlichen Flugrichtungen von dem Flightcontroller angesteuert.
   Der Flightcontroller liest die Daten an den einzelnen Steuerpins als Servo-Impulse ein. Die Daten werden dabei in einer Periode von $\SI{20}{\milli\second}$ gesendet.
   Die Information selbst liegt in den ersten $\SI{2}{\milli\second}$. Für den Impuls beträgt die Mittelstellung $\SI{1.5}{\milli\second}$, das Minimum $\SI{1}{\milli\second}$
@@ -278,7 +278,8 @@ void ReadHeight(void) {
   \textcolor{red}{OSZIBILD: min, max Impuls}
 
 
-    \subsubsection{Steuerungsarten Chrisy}
+    \subsubsection{Steuerungsarten}
+    AUtor: Christina Bornberg\\
     Der Flightcontroller DJI NAZA-M lite wird über die Befehle Aileron, Elevator, Rudder und Throttle gesteuert. Zusätzlich gibt es den 2/3-position mode channel, der für das Umschalten mehrerer Modei zuständig ist. Handelsübliche Fernbedienungen verfügen über die selben Steuerbefehle. \cite{GrundlagenMulticopter}
 
       \begin{itemize}
@@ -297,5 +298,3 @@ void ReadHeight(void) {
 
   \subsection{Umsetzung}
   Um den Hexacopter steuern zu können müssen die einzelnen Impulse von dem Mikrocontroller imitiert werden.
-
-  \subsection{Herausforderungen und Lösungen}
